styles/main.css
/* -- COLOURS -- */
/* -- NEW COLOUR PALLETTES -- */
/*
#FFFFFF WHITE
#00171F RICH BLACK
#003459 PRUSSIAN BLUE
#007EA7 CERRULEAN BLUE
#00A8E8 PICKTON BLUE
*/

/*
 #813405 BROWN
 #D45113 SYRACUSE ORANGE
 #F9A03F CARROT ORANGE
 #F8DDA4 PEACH YELLOW
 #DDF9C1 TEA GREEN
*/
/*
PERRYWINKLE

#f1eeff lightest
#c6bbff light
#9c88ff main 
#4722ff dark
#090033 darkest
*/

.back {
  font-size: 2rem;
  font-weight: 700;
  font-style: italic;
  padding: 1rem 2rem;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

body {
  font-family: monospace;
  height: auto;
  width: auto;
  background-color: #003459;

  /*background-size: cover;
  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
    url('/images/les-paul.jpg');
  position: relative;*/
}

p {
  font-size: 20px;
  font-weight: 300;
  color: #ffffff;
  max-width: 75ch;
  margin: /*15px;*/ 2rem;
  padding: /*15px;*/ 2rem;
}

a {
  font-family: 'Ubuntu Mono', monospace;
  text-decoration: none;
  color: #00a8e8;
}

b {
  color: #00a8e8;
  max-width: 45ch;
}

ul {
  list-style-type: none;
  font-size: 20px;
  font-weight: 300;
  list-style-type: none;
  color: #ffffff;
  max-width: 75ch;
  align-items: center;
  margin: 15px;
  padding: 15px;
}

h2 {
  font-family: 'Ubuntu Mono', monospace;
  font-size: 40px;
  color: #00a8e8;
  font-weight: 400;
  font-style: italic;
  max-width: 40ch;
  align-items: center;
  margin: /*15px;*/ 2rem;
  padding: /*15px;*/ 2rem;
}

h3 {
  font-family: 'Ubuntu Mono', monospace;
  font-size: 30px;
  color: #00a8e8;
  font-weight: 400;
  font-style: italic;
  margin: /*15px;*/ 2rem;
  padding: /*15px;*/ 2rem;
}

.main-flex {
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: left;
}

.heading {
  font-family: 'Ubuntu Mono', monospace;
  color: #00a8e8;
  font-size: 80px;
  margin: /*15px;*/ 2rem;
  padding: /*15px;*/ 2rem;
}

.homepage-card {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: 5rem 10rem 0 10rem;
}

.intro {
  font-size: 30px;
  color: #ffffff;
  max-width: 75ch;
  margin: 15px;
  padding: 15px;
  text-align: left;
}

.images {
  width: 40rem;
  height: 20rem;
  border-radius: 30px;
  position: relative;
  margin: /*15px;*/ 2rem;
  padding: /*15px;*/ 2rem;
  filter: brightness(0.7);
}

/* CARD STYLES */

* {
  box-sizing: border-box;
}

.card-item {
  width: 400px;
  margin: 1rem;
  position: relative;
  border-radius: 20px;
  background: rgba(0, 23, 31, 0.5);
  padding: 1rem;
  margin: 20px;
  box-shadow: 0 10px 10px rgba(0, 166, 232, 0.582);
}

.card-p {
  font-size: 20px;
  text-align: left;
  color: #ffffff;
  max-width: 60ch;
  margin: 10px;
  padding: 10px;
}

.image {
  width: 100%;
  height: 300px;
  border-radius: 10px;
  position: relative;
  background-size: cover;
  background-position: center center;
  box-shadow: 0 4px 3px rgba(0, 166, 232, 0.582); /*rgba(41, 40, 40, 0.267)*/
}

.content {
  margin: 10px;
  padding: 10px;
  color: #ffffff;
}

.title {
  color: #00a8e8;
  font-family: 'Ubuntu Mono', monospace;
  text-align: left;
  font-weight: 400;
  font-style: italic;
  font-size: 30px;
  margin: 10px;
  padding: 10px;
}

.button {
  color: #00a8e8;
  font-weight: 700;
  font-style: italic;
  font-size: 20px;
  font-weight: 600;
}

/* IMAGES */
.te-houtaewa-img {
  background-image: url('/images/auckland.jpg');
}

.html-css-img {
  background-image: url('/images/css-box.png');
}

.identity-values-img {
  background-image: url('/images/stockholm.jpg');
}

.learning-plan-img {
  background-image: url('/images/laptop.jpg');
}

.js-img {
  background-image: url('/images/js-img.jpg');
}

.emo-int-img {
  background-image: url('/images/emotional-int.jpg');
}

.brain-img {
  background-image: url('/images/brain.jpg');
}

.tui-img {
  background-image: url('/images/tui.jpg');
}

.rubix-img {
  background-image: url('/images/rubix.jpg');
}

/* CSS BOX STYLES */
.css-box-model {
  font-family: monospace;
  background-color: darkgrey;
  color: black;
  width: 500px;
  height: 500px;
  border: 20px solid red;
  padding: 80px;
  margin-top: 50px;
  align-items: center;
}

.border-model {
  color: red;
}

h1 {
  font-family: 'Ubuntu Mono', monospace;
}

/* -- USING FLEX BOX FOR RESPONSIVE DESIGN NOW -- */

/* RESPONSIVE DESIGN */

/* widescreen displays */
@media only screen and (min-width: 920px) {
  /* some layout rules */
}

/* tablets */
@media only screen and (max-width: 919px) {
  .heading {
    font-size: 60px;
    margin: 15px;
    padding: 15px;
  }

  .homepage-card {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }

  .intro {
    font-size: 25px;
    max-width: 60ch;
    margin: 10px;
    padding: 10px;
  }
  .mobile-layout {
    width: 600px;
    margin: 1rem;
    position: relative;
    border-radius: 30px;
    padding: 1rem;
    margin: 20px;
  }

  .mobile-images {
    width: 100%;
    height: auto;
    border-radius: 20px;
    position: relative;
    background-size: cover;
    background-position: center center;
    margin: 15px;
    padding: 15px;
  }

  p {
    max-width: 40ch;
    align-items: center;
    margin: 15px;
    padding: 15px;
  }

  .card-p {
    font-size: 20px;
    text-align: left;
    color: #ffffff;
    max-width: 40ch;
    margin: 10px;
    padding: 10px;
  }

  h2 {
    font-family: 'Ubuntu Mono', monospace;
    font-size: 30px;
    max-width: 40ch;
    align-items: center;
    margin: 15px;
    padding: 15px;
  }

  h3 {
    font-family: 'Ubuntu Mono', monospace;
    font-size: 25px;
    max-width: 50ch;
    align-items: center;
    margin: 15px;
    padding: 15px;
  }
}
/* phones */
@media only screen and (max-width: 500px) {
  .heading {
    font-size: 40px;
    margin: 10px;
    padding: 10px;
  }
  h2 {
    font-family: 'Ubuntu Mono', monospace;
    font-size: 25px;
    max-width: 40ch;
    align-items: center;
    margin: 10px;
    padding: 10px;
  }

  h3 {
    font-family: 'Ubuntu Mono', monospace;
    font-size: 25px;
    max-width: 50ch;
    align-items: center;
    margin: 10px;
    padding: 10px;
  }

  p {
    max-width: 40ch;
    align-items: center;
    margin: 10px;
    padding: 10px;
  }

  .card-p {
    font-size: 20px;
    text-align: left;
    color: #ffffff;
    max-width: 40ch;
    margin: 10px;
    padding: 10px;
  }

  .intro {
    font-size: 20px;
    max-width: 40ch;
  }

  .back {
    font-size: 25px;
    margin: 10px;
    padding: 10px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
  }
  .mobile-layout {
    width: 400px;
    margin: 1rem;
    padding: 1rem;
    position: relative;
  }

  .mobile-images {
    width: 100%;
    height: auto;
    border-radius: 15px;
    position: relative;
    background-size: cover;
    background-position: center center;
    margin: 5px;
    padding: 5px;
  }

  .card-item {
    box-shadow: 0 5px 5px rgba(0, 166, 232, 0.582);
  }

  /* CSS BOX STYLES */

  .css-box-model {
    font-family: monospace;
    background-color: darkgrey;
    color: black;
    width: auto;
    height: auto;
    border: 20px solid red;
    padding: 40px;
    margin-top: 50px;
    align-items: center;
  }
}

